--- a/src/pages/Login/loginPage.css
+++ b/src/pages/Login/loginPage.css
@@ -8,7 +8,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 0;
+    animation: reduceGap 1s ease-in-out forwards;
 }
+
+@keyframes reduceGap {
+    from {
+        gap: 100vw;
+    }
+    to {
+        gap: 0;
+    }
+}
+
 .login-page-left-area {
 }
 
