the routing bars on the main screen were designed and implemented as a separate component

--- a/src/pages/MainScreen/mainScreen.css
+++ b/src/pages/MainScreen/mainScreen.css
@@ -1,6 +1,6 @@
 .main-screen-container{
     position: relative;
-    background-color: #F8FAFB;
+    background-color: #1D2229;
     box-sizing: border-box;
     display: flex;
     width: 100vw;
