--- a/src/pages/SalesDashboard/SalesDashboardRightArea/salesDashboardRightArea.css
+++ b/src/pages/SalesDashboard/SalesDashboardRightArea/salesDashboardRightArea.css
@@ -1,4 +1,4 @@
-.right-container{
+.sales-dashboard-right-area-container{
     background-color: #F8FAFB;
     min-width: 33vw !important;
     max-width: 33vw !important;
@@ -14,12 +14,12 @@
     padding: 10px;
     border: 1px solid black;
 }
-.right-one{
+.sales-dashboard-right-area-control{
     display: flex;
     flex-direction: row;
     gap: 10px;
     flex-wrap: nowrap;
 }
-.right-two{
+.sales-dashboard-right-area-keyboard{
 
 }
