--- a/src/shared/components/ProductCard/productCard.css
+++ b/src/shared/components/ProductCard/productCard.css
@@ -62,6 +62,7 @@
 }
 .product-card-on-sale{
     font-style: italic;
+    text-align: center;
     position: absolute;
     color: white;
     font-weight: 600;
