--- a/src/pages/LoginPage/LoginPageRightArea/loginPageRightArea.css
+++ b/src/pages/LoginPage/LoginPageRightArea/loginPageRightArea.css
@@ -14,12 +14,12 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    margin-bottom: 20px;
+    margin-bottom: auto;
 }
 .login-page-right-area-inputs{
     box-sizing: border-box;
-    padding: 50px;
+    flex: 1;
+    padding: 70px 50px 0 50px;
     width: 100%;
     display: flex;
     flex-direction: column;
