--- a/src/pages/SalesDashboard/SalesDashboardRightArea/salesDashboardRightArea.css
+++ b/src/pages/SalesDashboard/SalesDashboardRightArea/salesDashboardRightArea.css
@@ -32,7 +32,7 @@
     box-sizing: border-box;
     top: 0;
     left: 0;
-    padding: 10px;
+    padding: 0 10px 10px;
     width: 100%;
     gap: 5px;
     background-color: #E8F5FC;
