--- a/src/shared/components/ProductCard/productCard.css
+++ b/src/shared/components/ProductCard/productCard.css
@@ -67,11 +67,35 @@
     color: white;
     font-weight: 600;
     background-color: red;
-    z-index: 11;
+    z-index: 3;
     transform: translate(-50%, -50%) rotate(-30deg);
     width: 100%;
     font-size: 1.1em;
     left: 50%;
     bottom: 45%;
     border-radius: 3px;
+}
+.product-card-click {
+    --c: green; /* the border color */
+    --b: 10px;    /* the border thickness*/
+    --g: 5px;     /* the gap on hover */
+
+    padding: calc(var(--g) + var(--b));
+    --_g: #0000 25%,var(--c) 0;
+    background:
+            conic-gradient(from 180deg at top    var(--b) right var(--b),var(--_g))
+            var(--_i,200%) 0  /200% var(--_i,var(--b))  no-repeat,
+            conic-gradient(            at bottom var(--b) left  var(--b),var(--_g))
+            0   var(--_i,200%)/var(--_i,var(--b)) 200%  no-repeat;
+    transition: .1s, background-position .1s .1s;
+    cursor: pointer;
+}
+.product-card-click:active {
+    --_i: 100%;
+    transition: .02s, background-size .02s .02s;
+}
+.product-card-disabled{
+    pointer-events: none;
+    user-select: none;
+    filter: grayscale(1);
 }
