--- a/src/shared/components/ProductShowcase/productShowcase.css
+++ b/src/shared/components/ProductShowcase/productShowcase.css
@@ -20,6 +20,7 @@
     flex-direction: column;
     padding: 1%;
     gap: 10px;
+    border: 1px solid black;
 }
 .product-showcase-search-area{
     width: 100%;
