a stylish area has been designed for the payment screen of the products in the basket, minor design decisions have been changed

--- a/src/pages/PaymentDashboard/PaymentDashboardLeftArea/paymentDashboardLeftArea.css
+++ b/src/pages/PaymentDashboard/PaymentDashboardLeftArea/paymentDashboardLeftArea.css
@@ -9,7 +9,7 @@
     position: relative;
     overflow: hidden !important;
     display: flex;
-    gap: 2px;
+    gap: 10vh;
     flex-direction: column;
     padding: 10px;
     border: 1px solid black;
