--- a/src/shared/components/Receipt/receipt.css
+++ b/src/shared/components/Receipt/receipt.css
@@ -62,7 +62,7 @@
     display: flex;
     justify-content: space-between;
 }
-hr{
+.receipt-container hr{
     width: 100%;
     color: black;
     border-style: dashed;
