--- a/src/pages/LoginPage/LoginPageRightArea/loginPageRightArea.css
+++ b/src/pages/LoginPage/LoginPageRightArea/loginPageRightArea.css
@@ -2,6 +2,7 @@
     position: relative;
     aspect-ratio: 400 / 483;
     display: flex;
+    z-index: 2;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -15,6 +16,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: auto;
+    gap: 10px;
 }
 .login-page-right-area-inputs{
     box-sizing: border-box;
