--- a/src/shared/components/ScreenKeyboard/screenKeyboard.css
+++ b/src/shared/components/ScreenKeyboard/screenKeyboard.css
@@ -1,27 +1,19 @@
 .screen-keyboard-container {
     z-index: 99999;
     position: fixed;
-    width: 100vw;
+    box-sizing: border-box;
+    width: 785px;
+    height: 255px;
     background-color: #12161B;
     border: 0.5px solid #1D2229;
-    padding: 20px;
+    padding-top: 25px;
+    padding-bottom: 5px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(60px, 62px));
+    gap: 3px;
     border-radius: 12px;
+    justify-content: center;
 }
-/*@keyframes slideUp {*/
-/*    0% {*/
-/*        bottom: -200px;*/
-/*    }*/
-/*    80% {*/
-/*        bottom: 20px;*/
-/*    }*/
-/*    100% {*/
-/*        bottom: 0;*/
-/*    }*/
-/*}*/
-
 .screen-keyboard-close-button {
     width: 16px;
     height: 16px;
@@ -34,7 +26,7 @@
     cursor: pointer;
     position: absolute;
     top: 2px;
-    left: 10px;
+    left: 3px;
     z-index: 1;
 }
 
