--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-/*#root{
-    background-color: black;
+#root{
+    position: relative;
     width: 100vw;
     height: 100vh;
     box-sizing: border-box;
     overflow: clip;
-}*/
+}
 
 
 ::-webkit-scrollbar {
