products dashboard made compatible for react router

--- a/src/pages/ProductsDashboard/components/ProductEditor/productEditor.css
+++ b/src/pages/ProductsDashboard/components/ProductEditor/productEditor.css
@@ -1,13 +1,14 @@
 .product-editor-container {
-    position: relative;
+    position: absolute;
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     background-color: rgba(0,0,0,0.4);
     z-index: 10;
+    top: 0;
 }
 
 .product-editor-data:hover {
