--- a/src/shared/components/MainContainer/mainContainer.css
+++ b/src/shared/components/MainContainer/mainContainer.css
@@ -8,6 +8,7 @@
     overflow: clip;
 }
 .main-container-header{
+    z-index: 101;
     background-color: #F8FAFB;
     user-select: none;
     padding: 0 10px;
@@ -20,6 +21,7 @@
     flex-direction: row;
 }
 .main-container-footer{
+    z-index: 101;
     background-color: #F8FAFB;
     user-select: none;
     padding: 0 10px;
@@ -32,5 +34,9 @@
     flex-direction: row;
 }
 .main-container-main{
+    padding: 0;
+    margin: 0;
     flex: 1;
+    max-width: 100vw;
+    max-height: 90vh;
 }
