--- a/src/shared/components/NumericKeyboard/numericKeyboard.css
+++ b/src/shared/components/NumericKeyboard/numericKeyboard.css
@@ -1,11 +1,11 @@
 .numeric-keyboard-container{
     box-sizing: border-box;
     aspect-ratio: 308 / 312!important;
-    padding: 10px;
+    padding: 4%;
     background-color: #FDFDFE;
     border: 1px solid black;
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-    gap: 10px;
+    gap: 2%;
 }
