order creation, data and routing processes have been largely completed

--- a/src/pages/SalesDashboard/SalesDashboardRightArea/salesDashboardRightArea.css
+++ b/src/pages/SalesDashboard/SalesDashboardRightArea/salesDashboardRightArea.css
@@ -19,8 +19,9 @@
     gap: 10px;
     flex-wrap: nowrap;
 }
-.sales-dashboard-right-area-keyboard{
-
+.sales-dashboard-right-area-control>*{
+    min-width: 0!important;
+    min-height: 0!important;
 }
 .sales-dashboard-right-area-campaigns{
     border-bottom: 1px solid black;
