--- a/src/pages/ResponsiveReceipt/responsiveReceipt.css
+++ b/src/pages/ResponsiveReceipt/responsiveReceipt.css
@@ -1,5 +1,8 @@
 .responsive-receipt-container{
     position: relative;
+    overflow-y: auto;
+    height: 90vh;
+    width: 100vw;
 }
 .responsive-receipt-receipt{
     position: absolute;
@@ -9,19 +12,31 @@
 .responsive-receipt-controller{
     position: fixed;
     z-index: 6;
-    top: 0;
+    top: 5vh;
     left: 50%;
     transform: translate(-50%);
 }
 
 @media print {
-    html * {
+    html *{
         visibility: hidden;
         user-select: none;
     }
+    * {
+        overflow: visible !important;
+        max-height: 100%;
+    }
+    .main-container-body *:not(.main-container-main, .main-container-main *) {
+        display: none;
+        max-width: 0!important;
+        max-height: 0!important;
+        padding: 0;
+        margin: 0;
+        border: 0;
+        top: 0;
+    }
     .printable-content-full {
         visibility: visible!important;
-        position: absolute!important;
         top: 0!important;
         left: 0!important;
         min-height: 100vh!important;
@@ -31,9 +46,8 @@
         transform: translate(0,0)!important;
     }
     .printable-content{
+        flex: 1;
         visibility: visible!important;
-        display: flex;
-        flex-direction: column;
     }
     .printable-content *{
         visibility: visible;
@@ -47,6 +61,7 @@
     .printable-content-full>*{
         flex: 1;
     }
+
     @page {
         size: auto;
         margin: 0;
