--- a/src/pages/LoginPage/LoginPageRightArea/loginPageRightArea.css
+++ b/src/pages/LoginPage/LoginPageRightArea/loginPageRightArea.css
@@ -4,10 +4,11 @@
     display: flex;
     z-index: 2;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     box-sizing: border-box;
-    padding: 10px;
+    padding: 10px 20px;
+    width: 400px;
 }
 .login-page-right-area-info{
     user-select: none;
@@ -15,13 +16,11 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    margin-bottom: auto;
     gap: 10px;
+    margin-bottom: 20%;
 }
 .login-page-right-area-inputs{
     box-sizing: border-box;
-    flex: 1;
-    padding: 70px 50px 0 50px;
     width: 100%;
     display: flex;
     flex-direction: column;
