--- a/src/shared/components/ScreenKeyboard/screenKeyboard.css
+++ b/src/shared/components/ScreenKeyboard/screenKeyboard.css
@@ -16,8 +16,8 @@
     justify-content: center;
 }
 .screen-keyboard-close-button {
-    width: 16px;
-    height: 16px;
+    width: 22px;
+    height: 22px;
     border: none;
     border-radius: 50%;
     color: white;
@@ -29,6 +29,9 @@
     top: 2px;
     left: 3px;
     z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .screen-keyboard-double {
