--- a/src/shared/components/ShoppingCartItem/shoppingCartItem.css
+++ b/src/shared/components/ShoppingCartItem/shoppingCartItem.css
@@ -29,6 +29,7 @@
 .shopping-cart-item-editor{
     position: absolute;
     display: flex;
+    align-items: center;
     flex-direction: row;
     justify-content: space-between;
     z-index: 2;
