--- a/src/pages/ProductsDashboard/components/ProductEditor/productEditor.css
+++ b/src/pages/ProductsDashboard/components/ProductEditor/productEditor.css
@@ -63,7 +63,9 @@
     position: absolute;
 }
 .product-editor-stock{
-    right: 13%;
+    transform: translateX(0%);
+    text-align: left;
+    right: 11%;
     top: 3%;
     font-size: 1.5vw;
     position: absolute;
