refactor code base

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,31 @@
+@font-face {
+    font-family: 'Noto Emoji';
+    src: url('/public/fonts/Noto_Emoji/NotoEmoji-VariableFont_wght.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'VT323';
+    src: url('/public/fonts/VT323/VT323-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Rubik';
+    src: url('/public/fonts/Rubik/Rubik-VariableFont_wght.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Rubik';
+    src: url('/public/fonts/Rubik/Rubik-Italic-VariableFont_wght.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+
 #root{
     position: relative;
     width: 100vw;
