made dark mode structure of PurchaseReceipt and its elements

--- a/src/shared/components/Receipt/receipt.css
+++ b/src/shared/components/Receipt/receipt.css
@@ -10,6 +10,7 @@
     justify-content: space-between;
     overflow-x: clip!important;
     border: .1px solid black;
+    color: black !important;
 }
 .receipt-refund{
     color: red;
