--- a/src/pages/ProductsDashboard/components/ProductEditor/productEditor.css
+++ b/src/pages/ProductsDashboard/components/ProductEditor/productEditor.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
     z-index: 10;
     top: 0;
 }
@@ -14,14 +14,16 @@
 .product-editor-data:hover {
     transform: scale(1.04);
 }
-.product-editor-data{
+
+.product-editor-data {
     position: relative;
 }
 
 .product-editor-container > * {
     z-index: 12;
 }
-.product-editor-name{
+
+.product-editor-name {
     left: 0;
     text-align: center;
     bottom: 16%;
@@ -29,40 +31,46 @@
     position: absolute;
     width: 100%;
 }
-.product-editor-barcode{
+
+.product-editor-barcode {
     left: 50%;
     bottom: 6%;
     font-size: 2vw;
     position: absolute;
     transform: translate(-50%, -50%);
 }
-.product-editor-price{
+
+.product-editor-price {
     left: 4%;
     top: 3%;
     font-size: 1.5vw;
     position: absolute;
     width: 15%;
 }
-.product-editor-price-label{
+
+.product-editor-price-label {
     left: 1%;
     top: 3%;
     font-size: 1.5vw;
     position: absolute;
 }
-.product-editor-tax{
+
+.product-editor-tax {
     left: 52%;
     top: 3%;
     font-size: 1.5vw;
     position: absolute;
     width: 6%;
 }
-.product-editor-tax-label{
+
+.product-editor-tax-label {
     left: 48%;
     top: 3%;
     font-size: 1.5vw;
     position: absolute;
 }
-.product-editor-stock{
+
+.product-editor-stock {
     transform: translateX(0%);
     text-align: left;
     right: 11%;
@@ -71,13 +79,15 @@
     position: absolute;
     max-width: 10%;
 }
-.product-editor-stock-label{
+
+.product-editor-stock-label {
     right: 1%;
     top: 3%;
     font-size: 1.5vw;
     position: absolute;
 }
-.product-editor-image-placeholder{
+
+.product-editor-image-placeholder {
     left: 2%;
     top: 30%;
     font-size: 1.5vw;
@@ -87,19 +97,22 @@
     color: transparent;
     z-index: 21;
 }
-.product-editor-photo-icon{
+
+.product-editor-photo-icon {
     left: 3%;
     top: 30%;
     font-size: 1.5vw;
     position: absolute;
 }
-.product-editor-campaign-section{
+
+.product-editor-campaign-section {
     left: 0;
     bottom: 27%;
     width: 100%;
     position: absolute;
 }
-.product-editor-campaign-text{
+
+.product-editor-campaign-text {
     left: 0;
     bottom: 31%;
     width: 100%;
@@ -110,7 +123,8 @@
     user-select: none;
     min-height: 2vw;
 }
-.product-editor-actions{
+
+.product-editor-actions {
     display: flex;
     flex-direction: row;
     width: 100%;
