--- a/src/shared/components/ProductShowcase/productShowcase.css
+++ b/src/shared/components/ProductShowcase/productShowcase.css
@@ -1,15 +1,16 @@
-.product-showcase-container{
+.product-showcase-container {
     z-index: 10;
     position: fixed;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
 }
-.product-showcase-active-area{
+
+.product-showcase-active-area {
     box-sizing: border-box;
-    background-color: rgba(248, 250, 251,0.85);
+    background-color: rgba(248, 250, 251, 0.85);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -22,31 +23,37 @@
     gap: 10px;
     border: 1px solid black;
 }
-.product-showcase-search-area{
+
+.product-showcase-search-area {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.product-showcase-filter-area{
+
+.product-showcase-filter-area {
     width: 100%;
     display: flex;
     flex-basis: auto;
 }
-.product-showcase-filter-area>*{
+
+.product-showcase-filter-area > * {
     flex-grow: 1;
 }
-.product-showcase-products-scroll-area{
+
+.product-showcase-products-scroll-area {
     width: 100%;
     flex: 1;
     overflow-y: auto;
 }
-.product-showcase-products-area{
+
+.product-showcase-products-area {
     width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
-.product-showcase-products-area>*{
+
+.product-showcase-products-area > * {
     margin: 0.273181%;
 }
