--- a/src/shared/components/ShoppingCartItem/shoppingCartItem.css
+++ b/src/shared/components/ShoppingCartItem/shoppingCartItem.css
@@ -1,4 +1,4 @@
-.shopping-cart-item-container{
+.shopping-cart-item-container {
     user-select: none;
     box-sizing: border-box;
     padding: 2px;
@@ -9,24 +9,28 @@
     border-bottom: 0.2px solid black;
     position: relative;
 }
-.shopping-cart-item-container:hover{
+
+.shopping-cart-item-container:hover {
     filter: brightness(1.4);
 }
-.shopping-cart-item-content-container{
+
+.shopping-cart-item-content-container {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-.shopping-cart-item-content{
+
+.shopping-cart-item-content {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     font-size: 0.8em;
     font-weight: 200;
 }
-.shopping-cart-item-editor{
+
+.shopping-cart-item-editor {
     position: absolute;
     display: flex;
     align-items: center;
@@ -37,14 +41,16 @@
     height: 100%;
     top: 0;
     left: -50%;
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255, 255, 255, 0.7);
     border-radius: 0 10px 10px 0;
 }
-.shopping-cart-item-disabled{
+
+.shopping-cart-item-disabled {
     pointer-events: none;
     user-select: none;
     filter: contrast(250%);
 }
+
 @keyframes jell-in {
     0% {
         left: -50%;
@@ -53,6 +59,7 @@
         left: 0;
     }
 }
+
 @keyframes jell-out {
     0% {
         left: 0;
