--- a/src/pages/LoginPage/LoginPageLeftArea/loginPageLeftArea.css
+++ b/src/pages/LoginPage/LoginPageLeftArea/loginPageLeftArea.css
@@ -3,6 +3,14 @@
     user-select: none;
 }
 
+.login-page-left-area-container.dark {
+    color: white;
+}
+
+.login-page-left-area-container.light {
+    color: #111418;
+}
+
 .login-page-left-area-texts {
     position: absolute;
     transform: translate(-50%, -50%);
@@ -39,4 +47,8 @@
     top: 5px;
     left: 15px;
     z-index: 100;
+}
+
+.warn {
+    filter: hue-rotate(145deg);
 }
