--- a/src/pages/LoginPage/LoginPageRightArea/loginPageRightArea.css
+++ b/src/pages/LoginPage/LoginPageRightArea/loginPageRightArea.css
@@ -11,6 +11,16 @@
     width: 400px;
 }
 
+.login-page-right-area-container.dark {
+    background-color: #1C1F25;
+    border: 2px solid #1A2027;
+}
+
+.login-page-right-area-container.light {
+    background-color: white;
+    border: 2px solid #1A2027;
+}
+
 .login-page-right-area-info {
     user-select: none;
     justify-content: center;
@@ -32,4 +42,20 @@
 .login-page-right-area-title {
     font-weight: 700;
     font-size: 2em;
+}
+
+.login-page-right-area-title.dark {
+    color: white;
+}
+
+.login-page-right-area-title.light {
+    color: #5492F0;
+}
+
+.login-page-right-area-subtitle.dark {
+    color: #5492F0;
+}
+
+.login-page-right-area-subtitle.light {
+    color: #E1E2E3;
 }
