--- a/src/pages/MainContainer/mainContainer.css
+++ b/src/pages/MainContainer/mainContainer.css
@@ -45,3 +45,25 @@
     max-width: 100vw;
     max-height: 90vh;
 }
+
+.main-container-footer.dark {
+    background-color: rgb(28, 31, 37);
+}
+
+.status-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.main-container-header.dark {
+    background-color: rgb(28, 31, 37);
+}
+
+.main-container-body.dark {
+    color: white;
+    background-color: rgb(17, 20, 24);
+}
+
+.main-container-main.dark {
+    background-color: #131922;
+}
