--- a/src/pages/PurchaseReceipts/purchaseReceipts.css
+++ b/src/pages/PurchaseReceipts/purchaseReceipts.css
@@ -10,3 +10,16 @@
     align-items: center;
     height: 200px;
 }
+
+.loading-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.5);
+    z-index: 1;
+}
