SettingsDashboard has been refactored

--- a/src/pages/SettingsDashboard/components/SettingsItem/settingsItem.css
+++ b/src/pages/SettingsDashboard/components/SettingsItem/settingsItem.css
@@ -47,3 +47,21 @@
         box-shadow: 0 0 0 10px rgba(255, 0, 0, 0);
     }
 }
+
+.settings-item.dark {
+    color: white;
+    filter: brightness(120%);
+}
+
+.settings-item.dark.undefined-onOff {
+    border-color: white;
+}
+
+.settings-item.light {
+    color: black;
+}
+
+.settings-item-border {
+    border-left: 2px solid;
+    padding-left: 10px;
+}
